fix block-poster z-index bug

--- a/src/styles/block/_poster.scss
+++ b/src/styles/block/_poster.scss
@@ -3,6 +3,7 @@
   flex-flow: row wrap;
   justify-content: center;
   position: relative;
+  z-index: 8;
 
   width: 100%;
 
